<resources>
    <string name="app_name">ParkirIn</string>
    <string name="greeting1">Parkir.In an ez way to peak a place</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="valetin">Valet.In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="dont_have_account">Dont have account ?</string>
    <string name="parking_id">Parking id</string>
    <string name="display_name">Display Name</string>
    <string name="plat">Plat</string>
    <string name="start_time">Start Time</string>
    <string name="valet">Valet</string>
    <string name="valet_check">Valet Check</string>
    <string name="valet_card">Valet Card</string>
    <string name="parkirin">Parkir.In</string>
    <string name="checkout">Checkout</string>
    <string name="choose_image">Choose Image</string>
</resources>